--- a/app/src/main/res/layout/activity_monitor.xml
+++ b/app/src/main/res/layout/activity_monitor.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:focusable="false"
-        android:inputType="text"/>
+        android:inputType="number"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -40,7 +40,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:focusable="false"
-        android:inputType="text"/>
+        android:inputType="number"/>
 
     <TextView
         android:layout_width="wrap_content"
