--- a/app/src/main/res/layout/launcher.xml
+++ b/app/src/main/res/layout/launcher.xml
@@ -26,7 +26,7 @@
 
 
 
-    <Button
+   <!-- <Button
 
         android:id="@+id/listBeacon"
         android:layout_height="75dp"
@@ -36,7 +36,7 @@
         android:text="Locate Beacons"
         style="@style/btnStyleSandrift"
         android:layout_marginTop="200dp"/>
-
+-->
     <Button
 
         android:id="@+id/monitorBeacon"
@@ -45,9 +45,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="40dp"
         android:onClick="monitor"
-        android:text="Monitor Beacons"
+        android:text="Beacon Information"
         style="@style/btnStyleSandrift"
-        android:layout_marginTop="305dp"/>
+        android:layout_marginTop="250dp"/>
 
     <TextView
         android:id="@+id/textView1"
@@ -70,7 +70,7 @@
         android:text="@string/map"
         android:textStyle="bold"
         style="@style/btnStyleSandrift"
-        android:layout_marginTop="410dp"
+        android:layout_marginTop="400dp"
         android:layout_centerHorizontal="true"/>
 
 
